# agent-eval-harness

./: .gitignore  DESIGN.md  LEARNINGS.md  Makefile  README.md  progress.md  pyproject.toml
.github/workflows/: ci.yml
datasets/: README.md  full_v1.jsonl  small_v1.jsonl
report/full_v1/: EVAL_REPORT.md  react_baseline.csv  summary.json  wayfinder_supervisor.csv
report/small_v1/: EVAL_REPORT.md  react_baseline.csv  summary.json  wayfinder_supervisor.csv
scripts/: make_charts.py
src/agent_eval_harness/: __init__.py  citations.py  cli.py  datasets.py  evaluate.py  experiment.py  judge.py  metric.py  persistence.py  runner.py
src/agent_eval_harness/live/: __init__.py  react.py  wayfinder.py
tests/: test_citations.py  test_cli.py  test_contracts.py  test_datasets.py  test_evaluate.py  test_experiment.py  test_judge.py  test_live_react.py  test_live_wayfinder.py  test_metrics.py  test_persistence.py  test_runner.py  test_smoke.py
tests/fixtures/: mini_tasks.jsonl
