[project]
name = "agent-eval-harness"
version = "0.0.1"
description = "Open-source evaluation harness for LLM agents + a 40-OSS-repo Supervisor-vs-ReAct benchmark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# LLM-as-judge / live runs (kept out of core so the framework imports without it).
llm = [
  "anthropic>=0.39.0",
]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

# The anthropic SDK is an optional extra (lazy-imported); don't fail strict mypy
# when it isn't installed in the gate environment.
[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
