[project]
name = "agent-eval-harness"
version = "0.0.1"
description = "Open-source evaluation harness for LLM agents + a 40-OSS-repo Supervisor-vs-ReAct benchmark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-eval = "agent_eval_harness.cli:main"

[project.optional-dependencies]
# LLM-as-judge / live runs (kept out of core so the framework imports without it).
llm = [
  "anthropic>=0.39.0",
]
# Live architecture invocation (HTTP to a running Wayfinder deployment).
live = [
  "httpx>=0.27.0",
]
# ReAct single-agent baseline (LangGraph prebuilt + OpenAI + MCP tools).
react = [
  "langgraph>=0.2.60",
  "langchain-openai>=0.2.0",
  "langchain-mcp-adapters>=0.1.0",
]
# Chart generation for EVAL_REPORT (scripts/make_charts.py).
report = [
  "matplotlib>=3.8.0",
]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

# Optional extras (lazy-imported); don't fail strict mypy when they aren't
# installed in the gate environment.
[[tool.mypy.overrides]]
module = [
  "anthropic.*",
  "langgraph.*",
  "langchain_openai.*",
  "langchain_mcp_adapters.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
